<resources>
    <string name="app_name">Notflix</string>
    <string name="Notflix">\n</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="director">Director</string>
    <string name="delete_movie_data">Delete Movie Data</string>

    <string-array name="rate">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>