<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/netflix_black"
    android:layout_height="match_parent"
    tools:context=".AddMoviesActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/Notflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:src="@drawable/logo_notflix_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextWelcomeAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter_bold"
        android:text="Edit Movie"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notflix" />

    <ScrollView
        android:id="@+id/ScrollViewAddMovies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/TextWelcomeAdmin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageMovie"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/notfoundimage"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="12dp" />

            <ImageButton
                android:id="@+id/ButtonAddMovieImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="-20dp"
                android:layout_marginBottom="-20dp"
                android:background="@drawable/button_plus"
                app:layout_constraintBottom_toBottomOf="@+id/imageMovie"
                app:layout_constraintEnd_toEndOf="@+id/imageMovie" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundColor="#222121"
                app:boxStrokeColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/imageMovie">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditMovieTitle"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/movie_title"
                    android:drawablePadding="10dp"
                    android:hint="@string/movie_title"
                    android:inputType="text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundColor="#222121"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:boxStrokeColor="@color/white"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayout1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditMovieDirector"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/director"
                    android:drawablePadding="10dp"
                    android:hint="@string/director"
                    android:inputType="text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:id="@+id/TextInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundColor="#222121"
                app:boxStrokeColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayout2">
                <AutoCompleteTextView
                    android:id="@+id/EditMovieRating"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/rate"
                    android:drawablePadding="10dp"
                    android:hint="Rating"
                    android:focusable="true"
                    android:enabled="true"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundColor="#222121"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:boxStrokeColor="@color/white"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditMovieDescription"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/description"
                    android:drawablePadding="10dp"
                    android:hint="Description"
                    android:lines="6"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:textSize="16sp"
                    android:overScrollMode="always"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="insideInset"
                    android:scrollHorizontally="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonConfirmEditMovie"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/inter_bold"
                android:text="Submit New Movie Data"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayout4">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/ButtonDeleteMovie"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="@color/netflix_black"
                android:fontFamily="@font/inter_bold"
                android:text="@string/delete_movie_data"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:drawableStart="@drawable/delete"
                app:layout_constraintTop_toBottomOf="@+id/ButtonConfirmEditMovie">
            </androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>